# AubreyEngine

./: .gitignore  Cargo.toml  README.md
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
crate/aubrey_common/: Cargo.toml
crate/aubrey_common/src/: direction.rs  lib.rs  size.rs
crate/aubrey_common/src/color/: mod.rs  rgba.rs
crate/aubrey_common/src/math/: mod.rs  vector.rs
crate/aubrey_core/: Cargo.toml
crate/aubrey_core/src/: app.rs  fs.rs  lib.rs  resources.rs
crate/aubrey_core/src/ecs/: bundle.rs  children.rs  ecs.rs  entity.rs  mod.rs  query.rs  registry.rs  schedule.rs  system.rs
crate/aubrey_editor/: Cargo.toml
crate/aubrey_editor/src/: main.rs
crate/aubrey_gui/: Cargo.toml
crate/aubrey_gui/src/: layout.rs  lib.rs  widgets.rs
crate/aubrey_render/: Cargo.toml
crate/aubrey_render/src/: lib.rs  text.rs
crate/aubrey_widget/: Cargo.toml
crate/aubrey_widget/src/: math.rs
crate/aubrey_window/: Cargo.toml
crate/aubrey_window/src/: lib.rs
docs/: ecs.md  scheduling.md
docs/components/: tick.md
