[package]
name = "aubrey_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
aubrey_core = { path = "../aubrey_core" }
aubrey_window = { path = "../aubrey_window" }
aubrey_render = { path = "../aubrey_render" }
aubrey_gui = { path = "../aubrey_gui" }
aubrey_common = { path = "../aubrey_common" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
